--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -67,6 +67,7 @@
 \newcommand{\under}[2]{#1\,\vdash\,#2}
 \newcommand{\mbleto}{\rightsquigarrow_m}
 \newcommand{\drawsome}{{\sf Canvas}\xspace}
+\newcommand{\lang}{\lambda_b}
 
 % New colors
 %------------
