--- a/paper/opsem.tex
+++ b/paper/opsem.tex
@@ -28,7 +28,7 @@ b & \in & \mathtt{Branches} & \coloneqq & [(v,f)] \ALT (v,f)::b \\
 %% relation is a single step of other). 
 
 %
-\textbf{Evaluation Contexts}\\
+\textbf{Artifacts of Evaluation}\\
 %
 \begin{smathpar}
 \renewcommand{\arraystretch}{1.2}
