--- a/paper/semantics.tex
+++ b/paper/semantics.tex
@@ -93,7 +93,7 @@ given value onto the current (local) branch, merges a (possibly empty)
 subset of concurrent branches into the local branch, and returns the
 result.
 
-We will not present a series of definitions and results that let us
+We will now present a series of definitions and results that let us
 understand the premises of the \rulelabel{E-Pull-Wait} rule, examine
 the merge operation in closer detail, and appreciate the need for
 constraining the branching structure. First, we formalize the
