--- a/paper/opsem.tex
+++ b/paper/opsem.tex
@@ -90,7 +90,7 @@ P & \in & \mathtt{Eval.\; Contexts}(p) & \coloneqq & E_t \ALT
 \RULE
 {
   t\neq t' \spc
-  \under{H}{v' \mbleto v} \spc
+% \under{H}{v' \mbleto v} \spc
 % \C{world}(H,t') \semsucceq \C{world}(H,t)\spc 
   v_m = \C{merge}(\C{lca}(H(t),H(t')), v, v') \spc
 }
