--- a/paper/semantics.tex
+++ b/paper/semantics.tex
@@ -92,3 +92,5 @@ be explained thus: \C{sync} pushes the given value onto the current
 branches into the local branch, and returns the result.
 
 \input{meta.tex}
+
+\input{system-model}
