--- a/paper/dali.tex
+++ b/paper/dali.tex
@@ -277,6 +277,8 @@ Text of abstract \ldots.
 
 \input{semantics}
 
+\input{mergeable-types}
+
 %% Acknowledgments
 % \begin{acks}                            %% acks environment is optional
 %                                         %% contents suppressed with 'anonymous'
